# bank_service_user

./: .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  docker-compose.yml  pyproject.toml  setup.cfg
microservice/: manage.py  pytest.ini
microservice/microservice/: asgi.py  settings.py  urls.py  wsgi.py  yasg.py
microservice/tests/: conftest.py
microservice/tests/user_service/: signup_tests.py  test_authentication.py  test_email_verify.py  test_login.py
microservice/tests/user_service/snapshots/signup_tests/test_check_is_client/: NOT_REGISTERED
microservice/tests/user_service/snapshots/signup_tests/test_get_phone_by_passport/: 79311111151
microservice/tests/user_service/snapshots/signup_tests/test_reset_pin/: pin_code.json
microservice/tests/user_service/snapshots/signup_tests/test_reset_security_question/: security_answer  security_question
microservice/tests/user_service/snapshots/signup_tests/test_sign_up_client/: vlad.sergienko00@yandex.ru
microservice/user_service/: admin.py  authentication.py  models.py  serializers.py  service.py  tools.py  urls.py  user_manager.py  views.py
microservice/user_service/migrations/: 0001_initial.py  0002_alter_client_uuid.py  0002_client_groups_client_user_permissions_and_more.py  0003_alter_client_uuid.py  0004_alter_client_uuid.py  0005_alter_client_uuid.py  0006_alter_client_uuid.py  0006_merge_0002_alter_client_uuid_0005_alter_client_uuid.py  0007_alter_client_uuid.py  0007_alter_client_uuid_pincode.py  0008_alter_client_uuid.py  0009_merge_20230227_1429.py  0010_alter_client_uuid.py
(+1 files in other folders)
